--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--
 Dummy Shopping Website (single-file)
-- Purpose: collect Date of Birth client-side only and generate a coupon code.
 - Privacy: This page DOES NOT send any data to servers. All logic runs in the browser and any coupon is stored only in localStorage (so it's only on the user's device).
 - How to use: save this file as `index.html` and open in a browser. To host for free, follow instructions in the chat (GitHub Pages or Netlify).
 -->
@@ -45,7 +44,7 @@ Dummy Shopping Website (single-file)
       <div class="logo">DS</div>
       <div>
         <h1>Exclusive Amazon Deals</h1>
-        <p class="lead">Enter your date of birth to reveal a coupon. No data leaves your browser.</p>
+        <p class="lead">Yo!!! Prove you are young below. No data leaves your browser.</p>
       </div>
     </header>
 
