--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ Dummy Shopping Website (single-file)
       <aside>
         <div class="couponBox">
           <div style="font-weight:700">Get a coupon</div>
-          <div class="muted">Enter your date of birth below. This non profit webpage will only use the date locally to compute an age and generate a coupon — nothing is sent anywhere.</div>
+          <div class="muted">This non profit webpage will only use the date locally to compute an age and generate a coupon — nothing is sent anywhere.</div>
 
-          <label for="dob">Date of birth</label>
+          <label for="dob">Please prove you are young and below 25years of age to prevent from malicious users.</label>
           <input id="dob" type="date" />
 
           <label for="name">(Optional) Name</label>
